--- a/Bernardin_Final_Project_RSpatial_2021.Rmd
+++ b/Bernardin_Final_Project_RSpatial_2021.Rmd
@@ -447,3 +447,5 @@ plot_min_depth_distribution(rf1)
 Best AUC was reported for the global random forest model (0.98).  The distribution of minimal depth provides a visualization of which variables are the most important in terms of informing the model, variables with lower mean depth scores are able to group the most numbers of observations with the least branches.  In the case of our random forest global model, precipitation and max temperature were the most efficient at grouping observations (mean minimal depth, 1 and 1.1 respectively).Each model provided valuable information, the random forest model gave an easy and accurate way of determining variable importance and effect of including less variables.  This provides helpful information, especially when variables may be correlated.  Even though the logistic regression had a lower AUC than maximum entropy and random forest, the information it provides in terms of effect size and direction on the response variable provides a good tool for making predictions.  Especially if we used random forest to determine which variables to include in the logistic regression.  
 
 I think using these models together helps to differentiate between variable importance, effect size, and predictive power.  Out of all of the models, random forest and the `glm` were the easiest for me to use, especially with the data and formula for the models and the k-fold cross validation.  `MaxEnt` was harder to understand what to put into the model and how to manipulate the data to perform kfcv.  Overall, the data I used to try and predict pitcher plant occurrence was informative.  It makes sense that precipitation would have a large effect on plant distribution because these plants are obligates of bog habitats and their survival depends on rainwater filling their pitchers.  I was surprised to see elevation also having a large effect and variable importance because despite most bogs occurring at sea level or close to, some *S. purpurea* have ranges that are at much higher elevations (high altitude bogs).
+
+__MW: Nice job, Jessica!! I like the randomForestExplainer package - I'll have to bring that in next year. I noticed that you used maxnet (instead of maxent), was that on purpose?? I appreciate how much of a pain this was to pull together and am impressed that you stuck with it. Good luck with the rest of your research!__
